<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gastos Games</string>
    <string name="help">Ajuda</string>
    <string name="title_section_home">Home</string>
    <string name="title_section_plataformas">Plataformas</string>
    <string name="title_section_categorias">Categorias</string>
    <string name="title_section_gastos">Gastos</string>
    <string name="title_section_graficos">Gráficos</string>
    <string name="title_section_relatorios">Relatórios</string>
    <string name="title_section_manutencao">Manutenção</string>
    <string name="navigation_drawer_open">Abrir gaveta de navegação</string>
    <string name="navigation_drawer_close">Fechar gaveta de navegação</string>
    <string name="title_activity_plataforma_form">PlataformaFormActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="nome_plataforma">Nome da plataforma</string>
    <string name="title_criar">Criar</string>
    <string name="title_editar">Editar</string>
    <string name="title_filtrar">Filtrar</string>
    <string name="title_nova_plataforma">Nova Plataforma</string>
    <string name="title_edit_plataforma">Editar Plataforma</string>
    <string name="option_ativa">Ativa</string>
    <string name="option_ativada">Ativada</string>
    <string name="option_desativada">Desativada</string>
    <string name="option_sim">Sim</string>
    <string name="option_nao">Não</string>
    <string name="option_vendivel">Vendível</string>
    <string name="option_apenas_vendiveis">Apenas gastos vendíveis</string>
    <string name="option_apenas_plataformas_ativas">Apenas plataformas ativas</string>
    <string name="action_example">Example action</string>
    <string name="action_new">Novo</string>
    <string name="action_settings">Configurações</string>
    <string name="action_filter">Filtros</string>
    <string name="action_search">Pesquisar</string>
    <string name="action_salvar">Salvar</string>
    <string name="action_cancelar">Cancelar</string>
    <string name="action_filtrar">Filtrar</string>
    <string name="action_limpar_filtros">Limpar todos filtros</string>
    <string name="action_remover_plataforma">Remover Plataforma</string>
    <string name="action_remover_categoria">Remover Categoria</string>
    <string name="action_remover_gasto">Remover Gasto</string>
    <string name="header_opoces">Opções</string>
    <string name="info_plataforma_criada">Plataforma criada com sucesso.</string>
    <string name="info_plataforma_atualizada">Plataforma atualizada com sucesso.</string>
    <string name="info_plataforma_removida">Plataforma removida com sucesso.</string>
    <string name="info_categoria_criada">Caegoria criada com sucesso.</string>
    <string name="info_categoria_atualizada">Categoria atualizada com sucesso.</string>
    <string name="info_categoria_removida">Categoria removida com sucesso.</string>
    <string name="info_gasto_criado">Gasto inserido com sucesso.</string>
    <string name="info_gasto_atualizado">Gasto atualizado com sucesso.</string>
    <string name="info_gasto_removido">Gasto removido com sucesso.</string>
    <string name="info_nenhum_gasto_encontrado">Nenhum gasto encontrado.</string>
    <string name="error_platforma_nao_encontrada">Plataforma não encontrada.</string>
    <string name="error_salvar_plataforma">Não foi possível salvar a plataforma.</string>
    <string name="error_salvar_categoria">Não foi possível salvar a categoria.</string>
    <string name="error_salvar_gasto">Não foi possível salvar o gasto.</string>
    <string name="error_categoria_nao_encontrada">Categoria não encontrada.</string>
    <string name="error_gasto_nao_encontrado">Gasto não encontrado.</string>
    <string name="error_nenhuma_plataforma_ativa">É necessário pelo menos uma plataforma ativa para inserir novos gastos.</string>
    <string name="error_data_inicial_maior_data_final">A data inicial deve ser anterior a data final.</string>
    <string name="error_data_final_menor_inicial">A data final deve ser posterior a data inicial.</string>
    <string name="validation_informe_nome_plataforma">Por favor, informe o nome da plataforma.</string>
    <string name="validation_plataforma_ja_existe_nome">Já existe uma plataforma com este nome.</string>
    <string name="validation_informe_nome_categoria">Por favor, informe o nome da categoria.</string>
    <string name="validation_categoria_ja_existe_nome">Já existe uma categoria com este nome.</string>
    <string name="validation_informe_descricao">Por favor, informe uma descrição.</string>
    <string name="validation_informe_valor">Por favor, informe o valor.</string>
    <string name="validation_valor_invalido">Valor inválido.</string>
    <string name="validation_valor_maior_zero">Por favor, informe um valor maior do que zero.</string>
    <string name="validation_informe_plataforma">Por favor, informe uma plataforma.</string>
    <string name="confirmation_remover_plataforma">Você tem certeza que deseja remover esta plataforma?\n\nAtenção: todos os gastos cadastrados nesta plataforma também serão removidos!</string>
    <string name="confirmation_remover_categoria">Você tem certeza que deseja remover esta categoria?\n\nAtenção: todos os gastos cadastrados nesta categoria ficarão sem categoria definida!</string>
    <string name="confirmation_remover_gasto">Você tem certeza que deseja remover este gasto?</string>
    <string name="title_activity_categoria_form">CategoriaFormActivity</string>
    <string name="nome_categoria">Nome Categoria</string>
    <string name="title_activity_gasto_form">GastoFormActivity</string>
    <string name="descricao_gasto">Descrição</string>
    <string name="valor">Valor</string>
    <string name="prompt_plataforma">Selecione a plataforma</string>
    <string name="option_plataforma">Plataforma</string>
    <string name="prompt_categoria">Selecione a categoria</string>
    <string name="option_categoria">Categoria</string>
    <string name="option_sem_categoria">Sem categoria</string>
    <string name="help_vendivel">Informe neste campo se este gasto é referente a um item que você pode revender no futuro, tal como um game em mídia física ou um controle adicional.\n
        Estes gastos “vendíveis” serão totalizados separadamente, o que poderá lhe fornecer uma estimativa na hora de estabelecer o preço de uma eventual venda de seu aparelho.\n\n
        Dica: você só precisa definir se um item é ou não vendível uma vez para cada categoria. Na próxima vez a app recordará sua escolha.</string>
    <string name="search_hint">Busca</string>
    <string name="title_activity_gasto_search_result">GastoSearchResultActivity</string>
    <string name="title_activity_teste">TesteActivity</string>
    <string name="title_activity_gastos_search_result">Resultado busca</string>
    <string name="title_resultado_busca_por">Resultado da busca por __query__</string>
    <string name="placeholder_plataforma">Plataforma</string>
    <string name="placeholder_calculando">Calculando&#8230;</string>
    <string name="placeholder_valor">R$0,00</string>
    <string name="label_gasto_total">Gasto Total:</string>
    <string name="label_valor">Valor</string>
    <string name="label_total">Total</string>
    <string name="label_total_geral">Total Geral</string>
    <string name="label_vendivel">Vendível</string>
    <string name="label_vendivel_total">Vendível:</string>
    <string name="label_ultimo_mes">Último mês:</string>
    <string name="label_ultimos_30_dias">Últimos 30 dias:</string>
    <string name="title_relatorio_comparativo_plataformas">Comparativo de Plataformas</string>
    <string name="title_relatorio_comparativo_categorias">Comparativo de Categorias</string>
    <string name="title_relatorio_comparativo_plataformas_e_categorias">Comparativo de Plataformas e Categorias</string>
    <string name="title_relatorio_gastos_analitico">Gastos Analítico</string>
    <string name="title_relatorio_gastos_sintetico">Gastos Sintético</string>
    <string name="title_relatorio_gastos_sintetico_mensal">Gastos Sintético Mensal</string>
    <string name="title_activity_grafico_comparativo_plataformas">Comparativo de Plataformas</string>
    <string name="title_activity_filtro">FiltroActivity</string>
    <string name="label_data">Data</string>
    <string name="label_data_inicial">Data inicial</string>
    <string name="label_data_final">Data final</string>
    <string name="title_activity_grafico_comparativo_categorias">Comparativo de Categorias</string>
    <string name="title_activity_grafico_comparativo_plataformas_categorias">Comparativo de Plataformas e Categorias</string>
    <string name="label_plataforma">Plataforma</string>
    <string name="label_plataformas">Plataformas</string>
    <string name="label_categoria">Categoria</string>
    <string name="label_mes">Mês</string>
    <string name="label_ano">Ano</string>
    <string name="label_gastos">Gastos</string>
    <string name="title_activity_relatorio_gastos">Relatório Gastos Analítico</string>
    <string name="title_activity_relatorio_gastos_vendiveis">Relatório Gastos Vendíveis Analítico</string>
    <string name="label_periodo">De __inicio__ à __fim__</string>
    <string name="label_periodo_inicio">Início __inicio__</string>
    <string name="label_periodo_fim">Fim __fim__</string>
    <string name="loading_relatorio">Gerando relatório&#8230;</string>
    <string name="title_activity_relatorio_gastos_sintetico">Relatório Gastos Sintético</string>
    <string name="title_activity_relatorio_gastos_sintetico_vendiveis">Relatório Gastos Vendíveis Sintético</string>
    <string name="title_activity_relatorio_gastos_sintetico_mensal">Relatório Gastos Sintético Mensal</string>
    <string name="title_activity_relatorio_gastos_sintetico_mensal_vendiveis">Relatório Gastos Vendíveis Sintético Mensal</string>
    <string name="exportar_db">Exportar Banco de Dados</string>
    <string name="importar_db">Importar Banco de Dados</string>
    <string name="info_db_exportado_sucesso">Bando de dados exportado com sucesso.\nLocal: __local__</string>
    <string name="error_exportacao_db">Não foi possível exportar o banco de dados.</string>
    <string name="info_db_importado_sucesso">Bando de dados importado com sucesso.</string>
    <string name="error_importacao_db">Não foi possível importar o banco de dados.</string>
    <string name="action_exportar_db">Exportar Banco de Dados</string>
    <string name="confirmation_exportar_db">Você tem certeza que deseja exportar o banco de dados?</string>
    <string name="action_importar_db">Importar Banco de Dados</string>
    <string name="confirmation_importar_db">Você tem certeza que deseja importar o banco de dados?\n\n
        Atenção: os dados atuais do aplicativo serão substituídos pelos dados encontrados no arquivo de importação. Qualquer dado cadastrado desde a ultima exportação será perdido.
        </string>
        <string name="error_arquivo_exportacao_nao_existe">O arquivo de importação não foi encontrado. Por favor, coloque o arquivo de importação no diretório: __diretorio__</string>
        

</resources>
