<ScrollView android:id="@+id/scrollView1"
android:layout_width="fill_parent" android:layout_height="fill_parent"
xmlns:tools="http://schemas.android.com/tools"
xmlns:android="http://schemas.android.com/apk/res/android">

<RelativeLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.garlini.gastosgames.view.FiltroActivity" >

    <LinearLayout
        android:id="@+id/layoutDataInicial"
        android:layout_height="wrap_content" 
        android:layout_width="fill_parent">
        
        <Button
        android:id="@+id/buttonDataInicial"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/label_data_inicial" />
        
        <ImageButton
            android:id="@+id/imageButtonCancelDataInicial"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:layout_gravity="bottom"
            android:contentDescription="@string/help"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_action_cancel" />
        
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/layoutDataFinal"
        android:layout_below="@id/layoutDataInicial"
        android:layout_height="wrap_content" 
        android:layout_width="fill_parent">
    
        <Button
        android:id="@+id/buttonDataFinal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="16dp"
        android:text="@string/label_data_final" />
        
        <ImageButton
            android:id="@+id/imageButtonCancelDataFinal"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:layout_gravity="bottom"
            android:contentDescription="@string/help"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_action_cancel" />
        
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/layoutPlataforma"
        android:layout_below="@id/layoutDataFinal"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content" 
        android:layout_width="fill_parent">
        
        <Spinner
         android:id="@+id/spinnerPlataforma"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:layout_marginTop="16dp"
         android:spinnerMode="dialog"
         android:prompt="@string/prompt_plataforma" />
        
        <ImageButton
            android:id="@+id/imageButtonCancelPlataforma"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:layout_gravity="bottom"
            android:contentDescription="@string/help"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_action_cancel" />
        
    </LinearLayout>
     
    <LinearLayout
        android:id="@+id/layoutVendivel"
        android:layout_below="@id/layoutPlataforma"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content" 
        android:layout_width="fill_parent">
        
        <Switch
        android:id="@+id/switchApenasVendiveis"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:text="@string/option_apenas_vendiveis"
        android:textOff="@string/option_nao"
        android:textOn="@string/option_sim" />
        
       </LinearLayout>
       
    <LinearLayout
        android:id="@+id/layoutAtivas"
        android:layout_below="@id/layoutVendivel"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content" 
        android:layout_width="fill_parent">
        
        <Switch
        android:id="@+id/switchApenasAtivas"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:text="@string/option_apenas_plataformas_ativas"
        android:textOff="@string/option_nao"
        android:textOn="@string/option_sim" />
        
       </LinearLayout>

</RelativeLayout>

</ScrollView>
